--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -153,7 +153,34 @@
        url('../fonts/gfs-didot-v10-greek-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/gfs-didot-v10-greek-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/gfs-didot-v10-greek-regular.svg#GFSDidot') format('svg'); /* Legacy iOS */
-  unicode-range: U+1F00, U+1FFF;
+}
+
+/* vollkorn-regular - greek */
+@font-face {
+  font-family: 'Vollkorn';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/CSS/fonts/vollkorn-v13-greek-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/CSS/fonts/vollkorn-v13-greek-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/CSS/fonts/vollkorn-v13-greek-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/CSS/fonts/vollkorn-v13-greek-regular.woff') format('woff'), /* Modern Browsers */
+       url('/CSS/fonts/vollkorn-v13-greek-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/CSS/fonts/vollkorn-v13-greek-regular.svg#Vollkorn') format('svg'); /* Legacy iOS */
+}
+
+/* vollkorn-italic - greek */
+@font-face {
+  font-family: 'Vollkorn';
+  font-style: italic;
+  font-weight: 400;
+  src: url('/CSS/fonts/vollkorn-v13-greek-italic.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/CSS/fonts/vollkorn-v13-greek-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/CSS/fonts/vollkorn-v13-greek-italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/CSS/fonts/vollkorn-v13-greek-italic.woff') format('woff'), /* Modern Browsers */
+       url('/CSS/fonts/vollkorn-v13-greek-italic.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/CSS/fonts/vollkorn-v13-greek-italic.svg#Vollkorn') format('svg'); /* Legacy iOS */
 }
 
 a {
@@ -255,52 +282,63 @@ li.header {
   right: -1px;
 }
 
-.header li:first-of-type:before {
-  content: url(/media/icons/parthenon.png);
-  position: relative;
-  transform: scale(.5);
-  right: +1px;
-  margin-top: -1px;
-}
-
 h3.new::after {
   background: url(/media/icons/new.png) right center no-repeat;
   vertical-align: middle;
   background-size: 20px auto;
   padding-left: 25px;
   content: "";
+  padding-top: 5px;
+}
+
+.header li:first-of-type:before {
+  background: url(/media/icons/parthenon-3.png) right center no-repeat;
+  vertical-align: middle;
+  background-size: 20px auto;
+  padding-left: 20px;
+  padding-top: 5px;
+  margin-right: 2px;
+  content: "";
 }
 
 .header li:nth-of-type(2):before {
-  content: url(/media/icons/scroll.png);
-  position: relative;
-  transform: scale(.5);
-  right: +1px;
-  margin-top: -1px;
+  background: url(/media/icons/letter.png) right center no-repeat;
+  vertical-align: middle;
+  background-size: 20px auto;
+  padding-left: 20px;
+  padding-top: 5px;
+  margin-right: 2px;
+  content: "";
 }
 
 .header li:nth-of-type(3):before {
-  content: url(/media/icons/column.png);
-  position: relative;
-  transform: scale(.5);
-  right: +1px;
-  margin-top: -1px;
+  background: url(/media/icons/pillar.png) right center no-repeat;
+  vertical-align: middle;
+  background-size: 20px auto;
+  padding-left: 20px;
+  padding-top: 5px;
+  margin-right: 2px;
+  content: "";
 }
 
 .header li:nth-of-type(4):before {
-  content: url(/media/icons/scroll_written.png);
-  position: relative;
-  transform: scale(.5);
-  right: +1px;
-  margin-top: -1px;
+  background: url(/media/icons/greek.png) right center no-repeat;
+  vertical-align: middle;
+  background-size: 20px auto;
+  padding-left: 20px;
+  padding-top: 5px;
+  margin-right: 2px;
+  content: "";
 }
 
 .header li:nth-of-type(5):before {
-  content: url(/media/icons/book.png);
-  position: relative;
-  transform: scale(.5);
-  right: +1px;
-  margin-top: -1px;
+  background: url(/media/icons/book.png) right center no-repeat;
+  vertical-align: middle;
+  background-size: 20px auto;
+  padding-left: 20px;
+  padding-top: 5px;
+  margin-right: 2px;
+  content: "";
 }
 
 .split {
@@ -345,6 +383,7 @@ img.thumbnail {
   font-family: Merriweather, Merriweather Sans; 
   box-sizing: border-box;
   /* cursor: url('/media/icons/quill.png'), auto; */
+  10140–1018F
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -638,4 +677,29 @@ div.heading-greek {
   display: block;
   margin-bottom: 20px;
   margin-top: 0px;
+}
+
+.separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.separator::before,
+.separator::after {
+  content: '';
+  flex: 1;
+  border-bottom: 1px solid #000;
+}
+
+.separator:not(:empty)::before {
+  margin-right: .25em;
+}
+
+.separator:not(:empty)::after {
+  margin-left: .25em;
+}
+
+.greek-font {
+  font-family: "Vollkorn";
 }
