--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -712,3 +712,16 @@ div.heading-greek {
 .greek-font {
   font-family: "Vollkorn";
 }
+
+.separator img {
+  width: 18px;
+  padding-bottom: 5px;
+}
+
+.separator img:nth-of-type(1) {
+  padding-right: 2px;
+}
+
+.separator img:nth-of-type(2) {
+  padding-left: 2px;
+}
